# vvctre-plugin-cycle-custom-layouts

./: .gitignore  .gitmodules  CMakeLists.txt  cycle-custom-layouts-plugin-settings.json  plugin.cpp
.github/workflows/: build.yml
